[package]
name = "ans104-indexer"
version = "0.1.0"
edition = "2021"
authors = ["Saeed Dadkhah <sa.dadkhah@gmail.com>"]
description = "A CLI tool to index ANS-104 bundles on the Arweave network."

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
base64 = "0.22.1"
sha2 = "0.10.8"
lazy_static = "1.5.0"
anyhow = "1.0.96"
bytes = "1.10.0"
structopt = "0.3"
hex = "0.4.3"
avro-rs = "0.13.0"
